# backend/src/main/java/org/borg/backend/notification/NotificationController.java
@@ -2,6 +2,7 @@ package org.borg.backend.notification;
 
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
+import org.apache.coyote.Response;
 import org.borg.backend.notification.model.Notification;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -24,6 +25,12 @@ public class NotificationController {
     @PostMapping("/send/{playerId}")
     public ResponseEntity<Void> sendNotification(@PathVariable Long playerId) {
         
+        return ResponseEntity.ok().build();
+    }
+    
+    @PostMapping("/read")
+    public ResponseEntity<Void> markAsRead(@RequestParam List<Long> notificationIds) {
+        notificationService.markAsRead(notificationIds);
         return ResponseEntity.ok().build();
     }
 }
